# nsDM

./: .gitmodules  CMakeLists.txt  LICENSE  README.en.md  README.md
DMMain/: OSChina下载REDM.txt  README.txt
Docs/: nsdm说明文档.docx
Plugins/: README.txt
Plugins/BgWorker/: BgWorker.cpp  BgWorker.nsi  build.cmd
Plugins/Nsis7z/CPP/7zip/Bundles/Nsis7z/: Nsis7z.vcproj  nsis7z.cpp
Plugins/Nsis7z/CPP/7zip/UI/Common/: WorkDir.cpp
Plugins/Nsis7z/CPP/7zip/UI/NSIS/: Main.cpp  MainAr.cpp
Plugins/Nsis7z/DOC/: nsis7z.txt
Plugins/Nsis7z1900/Contrib/nsis7z/CPP/7zip/Bundles/Nsis7z/: Nsis7z.sln  Nsis7z.vcxproj  Nsis7z.vcxproj.filters  StdAfx.h  nsis7z.cpp  pluginapi.cpp  resource.h
Plugins/Nsis7z1900/Contrib/nsis7z/CPP/7zip/UI/NSIS/: ExtractCallbackConsole.cpp  ExtractCallbackConsole.h  Main.cpp  MainAr.cpp  StdAfx.h  UserInputUtils2.cpp  UserInputUtils2.h
Plugins/Nsis7z1900/Examples/nsis7z/: example1.nsi
Tools/CMake/: PostBuild.cmd
nsCurl/: CMakeLists.txt
nsCurl/inc/: nsDefine.h  stdafx.h
nsCurl/src/: nsCurl.cpp  stdafx.cpp
nsDM/: CMakeLists.txt
nsDM/inc/: NotifyEdit.h  SkinEngine.h  nsDM.h  nsDefine.h  nsDmMsg.h  stdafx.h
nsDM/inc/zipres/: DMResZipHelper.h  DMResZipImpl.h
nsDM/src/: Logging.cpp  NotifyEdit.cpp  SkinEngine.cpp  WndShadow.cpp  nsDM.cpp  stdafx.cpp
nsDM/src/zipres/: DMResZipHelper.cpp  DMResZipImpl.cpp  DMZipHelper.cpp
nsUtil/: CMakeLists.txt
nsUtil/inc/: nsDefine.h  stdafx.h
nsUtil/src/: VCDetector.cpp  nsUtil.cpp  stdafx.cpp
script/: PostExec.nsh  nsCurl.nsh  nsdm.nsh  uac.vbs
